--- a/etchasketch/style.css
+++ b/etchasketch/style.css
@@ -25,3 +25,40 @@ body {
     display: flex;
     flex-wrap: wrap;
 }
+
+.grid-cell {
+    box-sizing: border-box;
+    border: 1px solid black;
+}
+
+#function-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+button, input {
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: bold;
+    color:darkslategray;
+    border-radius: 10px;
+}
+
+.button-container {
+    margin: 1dvw;
+}
+
+#size-setting {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#mode-selector {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
